# wolfinch

./: .gitignore  .project  .pydevproject  Dockerfile  Makefile  OldMonk.py  README  README.md  SkateBot.py  Wolfinch.py  generate_manual_order.py  market.py  pyproject.toml  requirement.txt  requirements.txt
config/: README.md  binance.yml  binance_sample_config.yml  binanceus_example.yml  cbpro.yml  cbpro_example.yml  oldmonk.yml  oldmonk_binanceus_btc.yml  oldmonk_binanceus_btc_xlm.yml  oldmonk_binanceus_xlm.yml  oldmonk_binanceus_xlm_backtest_sim.yml  oldmonk_cbpro_btc.yml  oldmonk_cbpro_btc_backtest_sim.yml  oldmonk_cbpro_btc_xlm.yml  oldmonk_gen_opt_binanceus_xlm.yml  oldmonk_gen_opt_cbpro_btc.yml  oldmonk_gen_opt_cbpro_xlm.yml  oldmonk_multi_products_sample.yml  robinhood_example.yml  wolfinch_binance_btc_backtest_sim.yml  wolfinch_binanceus_btc.yml  wolfinch_binanceus_btc_backtest_sim.yml  wolfinch_binanceus_btc_xlm.yml  wolfinch_binanceus_xlm.yml  wolfinch_binanceus_xlm_backtest_sim.yml  wolfinch_cbpro_btc.yml  wolfinch_cbpro_btc_backtest_sim.yml  wolfinch_cbpro_btc_xlm.yml  wolfinch_cbpro_xlm.yml  wolfinch_gen_opt_binanceus_btc.yml  wolfinch_gen_opt_binanceus_xlm.yml  wolfinch_gen_opt_cbpro_btc.yml  wolfinch_gen_opt_cbpro_xlm.yml  wolfinch_gen_opt_robinhood.yml  wolfinch_multi_products_sample.yml  wolfinch_robinhood.yml  wolfinch_robinhood_example.yml  wolfinch_robinhood_sim.yml
data/: OldMonk.sqlite.db  README.md
db/: __init__.py  candle_db.py  db.py  db_base.py  mongo_db.py  order_db.py  position_db.py
decision/: __init__.py  decision.py  decision_ML.py  (+7 more)
(+188 files in other folders)
